<resources>
    <string name="app_name">ListBuy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">            Email                               </string>
    <string name="prompt_password">         Password                            </string>
    <string name="prompt_passwordConfirm">  Confirm Password                    </string>
    <string name="action_sign_in">          Sign in or register                 </string>
    <string name="userName">                Complete name                       </string>
    <string name="action_sign_in_short">    Sign in                             </string>
    <string name="error_invalid_name">      This name is too short              </string>
    <string name="error_invalid_email">     This email address is invalid       </string>
    <string name="error_invalid_password">  This password is too short          </string>
    <string name="error_incorrect_password">This password is incorrect          </string>
    <string name="error_confirm_password">  This not is equals the password     </string>
    <string name="error_field_required">    This field is required              </string>
    <string name="title_activity_main">     MainActivity                        </string>
    <string name="action_settings">         Settings                            </string>
    <string name="title_activity_register"> Register                            </string>
    <string name="pick_date">               Date                                </string>
    <string name="register">                Register                            </string>
    <string name="login">                   Login                               </string>


    <string name="fb_login">                Sign in with Facebook               </string>
    <string name="fb_register">             Sign up with Facebook               </string>
    <string name="gplus_login">             Sign in with Google+                </string>
    <string name="gplus_register">          Sign up with Google+                </string>
    <string name="or">                      OR                                  </string>
    <string name="facebook_app_id">         344862699183231                     </string>
</resources>
