<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="my.mysql_php_register_login.RegisterActivity">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:visibility="gone" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5fb0c9"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <RelativeLayout
            android:id="@+id/boardWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userName"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_passwordConfirm"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    />

            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/txtOr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonLoginFacebook"
                android:layout_below="@+id/txtOr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3b5998"
                android:text="@string/fb_register"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:layout_below="@+id/buttonLoginFacebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#dc4e41"
                android:text="@string/gplus_register"
                android:textAllCaps="false"
                android:textColor="#fff"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>

